# fastapi-crudo

./: .gitignore  Dockerfile  LICENSE  README.md  example_app.py  llms.txt  pyproject.toml
fast_api_crudo/: __init__.py  actions.py  admin.py  auth.py  router.py  schema_factory.py
fast_api_crudo/static/: app.js  login.js  style.css
fast_api_crudo/templates/: index.html  login.html
